<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mappingbot_hardware</name>
  <version>0.0.0</version>
  <description>hardware interface for MappingBot DiffDrive system</description>
  <maintainer email="pulungtsaqif@gmail.com">Pulung Tsaqif</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <!-- <depend>mappingbot</depend> -->
  <depend>serial</depend>
  

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
